# modelconv

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
include/modelconv/: modelconv.h
resources/: donut2022.fbx
scripts/: convert_all.py  convert_default_textures.bat  make_texturelist.py  rewrite_extention_to_dds.py
src/: CMakeLists.txt  dummy.cpp  modelconv.cpp
tests/: CMakeLists.txt
